--- a/src/style.css
+++ b/src/style.css
@@ -73,8 +73,6 @@ input:focus {
   box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-/*  Please Subscribe to ThapaTechnical Youtube Channel
-/* Click Here: https://www.youtube.com/thapatechnical  */
 
 .todo-btn {
   width: 5rem;
@@ -89,7 +87,7 @@ input:focus {
   z-index: 10;
   background-color: #fff;
   background-image: none;
-  color: #666;
+  color: rgb(3, 2, 2);
   -webkit-transition: color 0.15s linear;
   transition: color 0.15s linear;
   font-size: 2rem;
@@ -153,8 +151,6 @@ input:focus {
   margin-left: -3.5rem;
 }
 
-/*  Please Subscribe to ThapaTechnical Youtube Channel
-/* Click Here: https://www.youtube.com/thapatechnical  */
 
 .eachItem:hover .fa-trash-alt {
   color: rgb(214, 47, 61);
